--- a/test/layers/CMakeLists.txt
+++ b/test/layers/CMakeLists.txt
@@ -11,3 +11,4 @@ ncnn_add_layer_test(absval_test)
 ncnn_add_layer_test(padding_test)
 ncnn_add_layer_test(conv_test)
 ncnn_add_layer_test(innerproduct_test)
+ncnn_add_layer_test(packing_test)
